--- a/Drum-Kit/styles.css
+++ b/Drum-Kit/styles.css
@@ -16,31 +16,31 @@ footer {
 }
 
 .w {
-    background-image: url('/images/crash.png')
+    background-image: url("/images/crash.png");
 }
 
 .a {
-    background-image: url('/images/kick.png')
+    background-image: url("/images/kick.png");
 }
 
 .s {
-    background-image: url('/images/snare.png')
+    background-image: url("/images/snare.png");
 }
 
 .d {
-    background-image: url('/images/tom1.png')
+    background-image: url("/images/tom1.png");
 }
 
 .j {
-    background-image: url('/images/tom2.png')
+    background-image: url("/images/tom2.png");
 }
 
 .k {
-    background-image: url('/images/tom3.png')
+    background-image: url("/images/tom3.png");
 }
 
 .l {
-    background-image: url('/images/tom4.png')
+    background-image: url("/images/tom4.png");
 }
 
 .set {
@@ -50,11 +50,6 @@ footer {
 .game-over {
     background-color: red;
     opacity: 0.8;
-}
-
-.pressed {
-    box-shadow: 0 3px 4px 0 #dbedf3;
-    opacity: 0.5;
 }
 
 .red {
@@ -80,5 +75,6 @@ footer {
 }
 
 .active-drum {
-    border: 10px solid #ffe75e;
+    box-shadow: 0 3px 4px 0 #dbedf3;
+    opacity: 0.5;
 }
